--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/.mypy_cache
-/__pycache__
-/notes.txt
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -161,3 +158,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+notes.txt
