--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,15 @@
-[build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
-
-[project]
+[tool.poetry]
 name = "terminaltexteffects"
-version = "0.0.1"
+version = "0.1.0"
+description = "A collection of visual effects that can be applied to terminal piped stdin text."
+authors = ["Chris <741258@pm.me>"]
+license = "MIT"
+readme = "README.md"
 
-[project.scripts]
-tte = "terminaltexteffects.__main__:main"
+[tool.poetry.dependencies]
+python = "^3.10"
+
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
