adds entry point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 
+[tool.poetry.scripts]
+tte = "terminaltexteffects.__main__:main"
 
 [build-system]
 requires = ["poetry-core"]
