--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ terminaltexteffects/effects/effect_test.py
 terminaltexteffects/effects/effect_dev.py
 *.png
 *.gv
+terminaltexteffects/lib_test.py
