--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,5 +28,32 @@ nav:
     - effects/beams.md
     - effects/binarypath.md
     - effects/blackhole.md
+    - effects/bouncyballs.md
+    - effects/bubbles.md
+    - effects/burn.md
+    - effects/crumble.md
+    - effects/decrypt.md
+    - effects/errorcorrect.md
+    - effects/expand.md
+    - effects/fireworks.md
+    - effects/middleout.md
+    - effects/orbittingvolley.md
+    - effects/overflow.md
+    - effects/pour.md
+    - effects/print.md
+    - effects/rain.md
+    - effects/randomsequence.md
+    - effects/rings.md
+    - effects/scattered.md
+    - effects/slide.md
+    - effects/spotlights.md
+    - effects/spray.md
+    - effects/swarm.md
+    - effects/synthgrid.md
+    - effects/unstable.md
+    - effects/verticalslice.md
+    - effects/vhstape.md
+    - effects/waves.md
+    - effects/wipe.md
     - reference.md
   - explanation.md
