--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,19 +18,23 @@ plugins:
 
 markdown_extensions:
   - admonition
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
       pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
-  - pymdownx.superfences
+  - attr_list
 
 nav:
-  - Welcome!: index.md
+  - Intro to TTE: index.md
   - How to install & use TTE:
     - Install: installation.md
     - Application Usage: appguide.md
+    - Library Usage: libguide.md
   - Reference:
     - Engine:
       - engine/baseeffect.md
