removes unintended pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,9 +41,9 @@ nav:
     - Install: installation.md
     - Application Usage: appguide.md
     - Library Usage: libguide.md
-  - Effect Building Guide:
-    - effectguide/effectguide.md
-    - effectguide/effectguide_lesson0.md
+  # - Effect Building Guide:
+  #   - effectguide/effectguide.md
+  #   - effectguide/effectguide_lesson0.md
   - Effects Showroom: showroom.md
   - Reference:
     - Engine:
