--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,7 +103,7 @@ nav:
       - effects/swarm.md
       - effects/synthgrid.md
       - effects/unstable.md
-      - effects/verticalslice.md
+      - effects/slice.md
       - effects/vhstape.md
       - effects/waves.md
       - effects/wipe.md
