--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,7 @@ nav:
       - effects/bouncyballs.md
       - effects/bubbles.md
       - effects/burn.md
+      - effects/colorshift.md
       - effects/crumble.md
       - effects/decrypt.md
       - effects/errorcorrect.md
