--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,6 +90,7 @@ nav:
       - effects/errorcorrect.md
       - effects/expand.md
       - effects/fireworks.md
+      - effects/matrix.md
       - effects/middleout.md
       - effects/orbittingvolley.md
       - effects/overflow.md
