--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -51,8 +51,8 @@
                 "${input:canvasHeight}",
                 "--anchor-canvas",
                 "${input:pickCanvasAnchor}",
-                "--anchor-effect",
-                "${input:pickEffectAnchor}",
+                "--anchor-text",
+                "${input:pickTextAnchor}",
                 "${input:pickEffect}",
             ]
         }
@@ -88,7 +88,7 @@
             "default": "sw"
         },
         {
-            "id": "pickEffectAnchor",
+            "id": "pickTextAnchor",
             "type": "pickString",
             "description": "Effect Anchor to use",
             "options": [
@@ -102,7 +102,7 @@
                 "nw",
                 "c"
             ],
-            "default": "se"
+            "default": "sw"
         },
         {
             "id": "pickText",
