adds visual marker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ line-length = 120
 console_output_style = "progress"
 minversion = "6.0"
 addopts = ["--capture=sys", "--strict-markers", "--strict-config", "-ra"]
-markers = ["manual: subset to run manually"]
+markers = ["manual: subset to run manually", "visual: visually inspect effects"]
 testpaths = ["tests"]
 
 [build-system]
