--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,4 @@ deps =
   pytest-cov
   pytest-randomly
   pytest-xdist
-commands = pytest -k "not manual" -n=auto
+commands = pytest -m smoke -n=auto
