--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,6 +98,7 @@ nav:
       - effects/expand.md
       - effects/fireworks.md
       - effects/highlight.md
+      - effects/laseretch.md
       - effects/matrix.md
       - effects/middleout.md
       - effects/orbittingvolley.md
