--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -114,6 +114,7 @@ nav:
       - effects/spotlights.md
       - effects/spray.md
       - effects/swarm.md
+      - effects/sweep.md
       - effects/synthgrid.md
       - effects/unstable.md
       - effects/vhstape.md
