--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
   - Intro to TTE: index.md
   - Change[B]log: 
     - changeblog/changeblog.md
+    - changeblog/changeblog_0.12.0.md
     - changeblog/changeblog_0.11.0.md
     - changeblog/changeblog_0.10.0.md
 
@@ -77,11 +78,12 @@ nav:
         - engine/utils/ansitools.md
         - engine/utils/argsdataclass.md
         - engine/utils/argvalidators.md
+        - engine/utils/color.md
+        - engine/utils/colorpair.md
         - engine/utils/colorterm.md
         - engine/utils/easing.md
         - engine/utils/exceptions.md
         - engine/utils/geometry.md
-        - engine/utils/color.md
         - engine/utils/gradient.md
         - engine/utils/hexterm.md
     - Effects:
