refactor: update ruff configuration to set target version and adjust linting rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tte = "terminaltexteffects.__main__:main"
 [tool.ruff]
 show-fixes = true
 line-length = 120
+target-version = "py38"
 
 [tool.ruff.lint]
 ignore = [
@@ -27,6 +28,7 @@ ignore = [
     "PLR0913", # too many function args
     "PLR2004", # magic numbers
     "RUF009",  # function-call-in-dataclass-default-argument
+    "S101",    # use of assert
     "S311",    # suspicious-non-cryptographic-random-usage
     "SLF001",  # private member access
     "TRY003",  # f-strings in exception message
@@ -35,6 +37,7 @@ ignore = [
 select = ["ALL"]
 fixable = ["ALL"]
 extend-fixable = ["EM102"]
+typing-extensions = false
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401", "D104"]
