--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,3 +68,12 @@ testpaths = ["tests"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.22",
+    "mkdocstrings-python>=1.11.1",
+    "pymdown-extensions>=10.15",
+    "pytest>=8.3.5",
+]
