--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,7 @@ nav:
       - effects/scattered.md
       - effects/slice.md
       - effects/slide.md
+      - effects/smoke.md
       - effects/spotlights.md
       - effects/spray.md
       - effects/swarm.md
