--- a/.gitignore
+++ b/.gitignore
@@ -166,8 +166,9 @@ terminaltexteffects/test_tte.py
 github_resources/*
 *.gv
 effect_test.py
-effect_dev.py
-effect_canvas_test.py
+effect_dev*.py
+effect_canvas_test.
+
 .vscode/*
 lib_tests/*
 dev_notes/*
